--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     return (width / 2) - (wizardWidth / 2);
   };
   var getWizardY = function(height) {
-    return (height - 200 - getWizardHeight());
+    return (height - (2 / 3 * height) - getWizardHeight());
   };
 </script>
 <script src="js/game.js"></script>
